--- a/HTML/main.html
+++ b/HTML/main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="script" href="script.js">
+    <link rel="stylesheet" href="/fffgames/CSS/styles.css">
+    <link rel="script" href="/fffgames/JS/script.js">
     <title>FFGames</title>
 </head>
 
@@ -47,43 +47,44 @@
     <section class="game_frame">
         <div class="column_1">
             <div class="column1_row_1">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <a href="/fffgames/HTML/game.html"><img src="/fffgames/Images/game-controller-icon.png"
+                        alt="Image of game-controller-icon"></a>
             </div>
 
             <div class="column1_row_2">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
 
             <div class="column1_row_3">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
         </div>
 
         <div class="column_2">
             <div class="column2_row_1">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
 
             <div class="column2_row_2">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
 
             <div class="column2_row_3">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
         </div>
 
         <div class="column_3">
             <div class="column3_row_1">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
 
             <div class="column3_row_2">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
 
             <div class="column3_row_3">
-                <img src="./Images/game-controller-icon.png" alt="Image of game-controller-icon">
+                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
             </div>
         </div>
     </section>
