--- a/HTML/game.html
+++ b/HTML/game.html
@@ -12,10 +12,10 @@
     <script src="../libraries/p5.sound.js" type="text/javascript"></script>
 
     <!-- JS Scripts -->
-    <script src="paddle.js" type="text/javascript"></script>
-    <script src="ball.js" type="text/javascript"></script>
-    <script src="brick.js" type="text/javascript"></script>
-    <script src="sketch.js" type="text/javascript"></script>
+    <script src="/fffgames/JS/paddle.js" type="text/javascript"></script>
+    <script src="/fffgames/JS/ball.js" type="text/javascript"></script>
+    <script src="/fffgames/JS/bricks.js" type="text/javascript"></script>
+    <script src="/fffgames/JS/sketch.js" type="text/javascript"></script>
 
     <title>Germ Killa</title>
 </head>
