--- a/HTML/main.html
+++ b/HTML/main.html
@@ -29,12 +29,12 @@
                     <input type="search" name="searchBar" id="searchBar" placeholder="Search...">
                     <button class="button_search">Go</button>
                 </div>
-
+                <form name = "form" action="login.html">
                 <div class="account_items">
                     <div class="account_item_login">
-                        <button class="button_account">Login</button>
+                        <button class="button_account" formaction="login.html">Login</button>
                     </div>
-
+                </form>
                     <div class="account_item_signup">
                         <button class="button_account">Sign-Up</button>
                     </div>
