--- a/HTML/main.html
+++ b/HTML/main.html
@@ -35,9 +35,11 @@
                         <button class="button_account" formaction="login.html">Login</button>
                     </div>
                 </form>
+                <form name = "form" action = "signup.html">
                     <div class="account_item_signup">
                         <button class="button_account">Sign-Up</button>
                     </div>
+                </form>
                 </div>
             </div>
         </section>
