Updating the JS Files
Images were not loading, had to merge all js into one file.

--- a/HTML/game.html
+++ b/HTML/game.html
@@ -22,7 +22,14 @@
 
 <body>
 
-
+    <style>
+        body {
+            margin: 4rem 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 
 </body>
 
