--- a/HTML/game.html
+++ b/HTML/game.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- P5 Library -->
-    <script src="../libraries/p5.js" type="text/javascript"></script>
-    <script src="../libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="../libraries/p5.sound.js" type="text/javascript"></script>
+    <script src="/libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="/libraries/p5.js" type="text/javascript"></script>
+    <script src="/libraries/p5.sound.js" type="text/javascript"></script>
 
     <!-- JS Scripts -->
-    <script src="/fffgames/JS/sketch.js" type="text/javascript"></script>
+    <script src="/JS/sketch.js" type="text/javascript"></script>
 
     <title>Germ Killa</title>
 </head>
