Finishing Touches - Skeleton
The site body layout and design is complete

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -5,112 +5,153 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
+    <!-- Icons -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
     <link rel="stylesheet" href="/fffgames/CSS/styles.css">
-    <link rel="script" href="/fffgames/JS/script.js">
     <title>FFGames</title>
 </head>
 
 <body>
     <!-- Nav Bar -->
-    <section class="outside_border">
-        <section class="header_content">
-            <div class="header_content_leftside">
-                <h1 class="site_name">FFGames.Rocks</h1>
-                <div class="button_container">
-                    <button class="button_normal">Home</button>
-                    <button class="button_normal">Account</button>
-                    <button class="button_normal">Supplies</button>
-                    <button class="button_normal">Help</button>
+    <div class="normal">
+        <section class="header_border">
+            <section class="header_content">
+                <div class="header_content_leftside">
+                    <h1 class="site_name">FFGames.Rocks</h1>
+                    <div class="button_container">
+                        <button class="button_normal">Home</button>
+                        <button class="button_normal">Account</button>
+                        <button class="button_normal">Supplies</button>
+                        <button class="button_normal">Help</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="header_content_rightside">
-                <div class="search_items">
-                    <input type="search" name="searchBar" id="searchBar" placeholder="Search...">
-                    <button class="button_search">Go</button>
-                </div>
-                <form name = "form" action="login.html">
-                <div class="account_items">
-                    <div class="account_item_login">
-                        <button class="button_account" formaction="login.html">Login</button>
+                <div class="header_content_rightside">
+                    <div class="search_items">
+                        <input type="search" name="searchBar" id="searchBar" placeholder="Search...">
+                        <button class="button_search">Go</button>
                     </div>
-                </form>
-                <form name = "form" action = "signup.html">
-                    <div class="account_item_signup">
-                        <button class="button_account">Sign-Up</button>
-                    </div>
-                </form>
+                    <form name="form" action="login.html">
+                        <div class="account_items">
+                            <div class="account_item_login">
+                                <button class="button_account" formaction="login.html">Login</button>
+                            </div>
+                    </form>
+                    <form name="form" action="signup.html">
+                        <div class="account_item_signup">
+                            <button class="button_account">Sign-Up</button>
+                        </div>
+                    </form>
                 </div>
-            </div>
+            </section>
         </section>
-    </section>
+    </div>
 
-    <!-- Body when collapsed -->
-    <section class="game_frame">
-        <div class="column_1">
-            <div class="column1_row_1">
-                <a href="/fffgames/HTML/game.html"><img src="/fffgames/Images/game-controller-icon.png"
-                        alt="Image of game-controller-icon"></a>
+    <!-- Body when un-collapsed -->
+    <section class="section game-section">
+        <div class="game-center container">
+            <div class="game">
+                <div class="img-cover">
+                    <img src="/fffgames/Images/game-image-1.jpeg" alt="image-of-game">
+                </div>
+                <p>Name of the game</p>
             </div>
 
-            <div class="column1_row_2">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
+            <div class="game">
+                <div class="img-cover">
+                    <img src="/fffgames/Images/game-image-1.jpeg" alt="image-of-game">
+                </div>
+                <p>Name of the game</p>
             </div>
 
-            <div class="column1_row_3">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
-            </div>
-        </div>
-
-        <div class="column_2">
-            <div class="column2_row_1">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
+            <div class="game">
+                <div class="img-cover">
+                    <img src="/fffgames/Images/game-image-1.jpeg" alt="image-of-game">
+                </div>
+                <p>Name of the game</p>
             </div>
 
-            <div class="column2_row_2">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
+            <div class="game">
+                <div class="img-cover">
+                    <img src="/fffgames/Images/game-image-1.jpeg" alt="image-of-game">
+                </div>
+                <p>Name of the game</p>
             </div>
 
-            <div class="column2_row_3">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
-            </div>
-        </div>
-
-        <div class="column_3">
-            <div class="column3_row_1">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
+            <div class="game">
+                <div class="img-cover">
+                    <img src="/fffgames/Images/game-image-1.jpeg" alt="image-of-game">
+                </div>
+                <p>Name of the game</p>
             </div>
 
-            <div class="column3_row_2">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
-            </div>
-
-            <div class="column3_row_3">
-                <img src="/fffgames/Images/game-controller-icon.png" alt="Image of game-controller-icon">
+            <div class="game">
+                <div class="img-cover">
+                    <img src="/fffgames/Images/game-image-1.jpeg" alt="image-of-game">
+                </div>
+                <p>Name of the game</p>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <section>
-        <section>
-            <section>
-                <div>
-                    <h1>FFGames.Rocks</h1>
+    <section class="footer_border footer">
+        <h1 class="site_name footer-site_name-fix">FFGames.Rocks</h1>
+        <div class="contianer">
+            <div class="footer-container">
+                <div class="footer-col">
+                    <h3>Information</h3>
+                    <a href="#">Resources</a>
+                    <a href="#">Health Experts</a>
+                    <a href="#">Coaches</a>
                 </div>
 
-                <div>
-                    <ul>
-                        <li>Resources</li>
-                        <li>Health Experts</li>
-                        <li>Coaches</li>
-                        <li>Social Media</li>
-                        <li>Contact Us</li>
-                    </ul>
+                <div class="footer-col">
+                    <h3>Social Media</h3>
+                    <a href="#">Twitter</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">Facebook</a>
                 </div>
-            </section>
-        </section>
+
+                <div class="footer-col">
+                    <h3>Contact Us</h3>
+                    <div>
+                        <span>
+                            <i class="bx bxs-map"></i>
+                        </span>
+                        8000 York Rd, Towson, MD, USA
+                    </div>
+
+                    <div>
+                        <span class="clickable-email">
+                            <i class="bx bx-envelope"></i>
+                        </span>
+                        <span class="clickable-email">
+                            gvarga3@students.towson.edu
+                        </span>
+                    </div>
+
+                    <div>
+                        <span>
+                            <i class="bx bx-phone"></i>
+                        </span>
+                        (410) 704-2000
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <script src="/fffgames/JS/script.js" type="text/javascript"></script>
 </body>
 
 </html>
