Final Animations - Site
Everything is complete on the main site

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -16,6 +16,12 @@
     <!-- Icons -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 
+    <!-- Animation Script Plugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+        integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
+        crossorigin="anonymous">
+        </script>
+
     <link rel="stylesheet" href="/fffgames/CSS/styles.css">
     <title>FFGames</title>
 </head>
