--- a/HTML/main.html
+++ b/HTML/main.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous">
         </script>
 
-    <link rel="stylesheet" href="/fffgames/CSS/styles.css">
+    <link rel="stylesheet" href="/fffgames/CSS/main_styles.css">
     <title>FFGames</title>
 </head>
 
@@ -157,7 +157,7 @@
         </div>
     </section>
 
-    <script src="/fffgames/JS/script.js" type="text/javascript"></script>
+    <script src="/fffgames/JS/main_script.js" type="text/javascript"></script>
 </body>
 
 </html>
