Creating Game Page
-Removed and added some images
-Created a layout
-Populated layout with items
-added game
-added icons
-added progress bars

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -67,7 +67,8 @@
         <div class="game-center container">
             <div class="game">
                 <div class="img-cover">
-                    <img src="/fffgames/Images/game-image-1.jpeg" alt="image-of-game">
+                    <a href="/fffgames/HTML/game.html"><img src="/fffgames/Images/game-image-1.jpeg"
+                            alt="image-of-game"></a>
                 </div>
                 <p>Name of the game</p>
             </div>
