--- a/HTML/game.html
+++ b/HTML/game.html
@@ -6,28 +6,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+
     <!-- P5 Library -->
-    <script src="/libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="/libraries/p5.js" type="text/javascript"></script>
-    <script src="/libraries/p5.sound.js" type="text/javascript"></script>
+    <script src="/fffgames/libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="/fffgames/libraries/p5.js" type="text/javascript"></script>
+    <script src="/fffgames/libraries/p5.sound.js" type="text/javascript"></script>
 
-    <!-- JS Scripts -->
-    <script src="/JS/sketch.js" type="text/javascript"></script>
-
+    <link rel="stylesheet" href="/fffgames/CSS/game_styles.css">
     <title>Germ Killa</title>
 </head>
 
-<body>
+<body class="scroll-hide">
+    <header class="nav">
+        <h1 class="site_name">FFGames.Rocks</h1>
+        <button class="button_normal" onClick="location.href='main.html'">Home</button>
+        <button class="button_normal">Account</button>
+    </header>
 
-    <style>
-        body {
-            margin: 4rem 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
+    <article class="game" id="game">
+    </article>
 
+    <div class="icon-div">
+        <div class="img-cover">
+            <img src="/fffgames/Images/burger.png" alt="burger-icon">
+        </div>
+        <div class="img-cover">
+            <img src="/fffgames/Images/pizza.png" alt="pizza-icon">
+        </div>
+        <div class="img-cover">
+            <img src="/fffgames/Images/heart.png" alt="heart-icon">
+        </div>
+        <div class="img-cover">
+            <img src="/fffgames/Images/load-bar.png" alt="progress-icon">
+        </div>
+    </div>
+
+    <div class="percentage-div">
+        <div class="progress" id="burgers">
+            <div class="bar"></div>
+        </div>
+
+        <div class="progress" id="pizzas">
+            <div class="bar"></div>
+        </div>
+
+        <div class="progress" id="hearts">
+            <div class="bar"></div>
+        </div>
+
+        <div class="progress" id="progress">
+            <div class="bar"></div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <h1 class="site_name footer-site_name-fix">FFGames.Rocks</h1>
+        <span class="items">
+            <a href="">Resources</a>
+            <a href="">Health Experts</a>
+            <a href="">Coaches</a>
+            <a href="">Contact</a>
+        </span>
+    </footer>
+
+    <!-- JS Scripts -->
+    <script src="/fffgames/JS/sketch.js" type="text/javascript"></script>
+    <script src="/fffgames/JS/game_script.js" type="text/javascript"></script>
 </body>
 
 </html>
