--- a/HTML/game.html
+++ b/HTML/game.html
@@ -21,7 +21,9 @@
 
 <body class="scroll-hide">
     <header class="nav">
-        <h1 class="site_name">FFGames.Rocks</h1>
+        <a href="/fffgames/HTML/main.html">
+            <h1 class="site_name">FFGames.Rocks</h1>
+        </a>
         <button class="button_normal" onClick="location.href='main.html'">Home</button>
         <button class="button_normal">Account</button>
     </header>
