--- a/HTML/main.html
+++ b/HTML/main.html
@@ -34,10 +34,10 @@
                 <div class="header_content_leftside">
                     <h1 class="site_name">FFGames.Rocks</h1>
                     <div class="button_container">
-                        <button class="button_normal">Home</button>
-                        <button class="button_normal">Account</button>
-                        <button class="button_normal">Supplies</button>
-                        <button class="button_normal">Help</button>
+                        <button class="button_normal" onClick="location.href='main.html'">Home</button>
+                        <button class="button_normal" onClick="location.href='main.html'">Account</button>
+                        <button class="button_normal" onClick="location.href='main.html'">Supplies</button>
+                        <button class="button_normal" onClick="location.href='main.html'">Help</button>
                     </div>
                 </div>
 
