--- a/HTML/login.html
+++ b/HTML/login.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+
   <!-- CSS -->
   <link rel="stylesheet" href="/fffgames/CSS/login_styles.css">
 
@@ -13,8 +17,104 @@
 </head>
 
 <body>
-  <form action="action_page.php" method="post">
+  <!-- Maybe -->
+  <form autocomplete='off' class='form'>
 
+    <div class='control'>
+      <a href="/fffgames/HTML/main.html">
+        <h1 class="site_name">FFGames.Rocks</h1>
+      </a>
+    </div>
+
+    <div class='control'>
+      <h2>
+        Sign In
+      </h2>
+    </div>
+
+    <div class='control block-cube block-input'>
+      <input name='username' placeholder='Username' type='text'>
+      <div class='bg-top'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg-right'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg'>
+        <div class='bg-inner'></div>
+      </div>
+    </div>
+
+    <div class='control block-cube block-input'>
+      <input name='password' placeholder='Password' type='password'>
+      <div class='bg-top'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg-right'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg'>
+        <div class='bg-inner'></div>
+      </div>
+    </div>
+
+    <div class="control">
+      <input type="checkbox" checked="checked" name="remember" class="no-width"> Remember me
+    </div>
+
+    <button class='btn block-cube block-cube-hover' type='button'>
+      <div class='bg-top'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg-right'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='text'>
+        Log In
+      </div>
+    </button>
+
+    <!-- <button class='btn block-cube block-cube-hover' type='button'>
+      <div class='bg-top'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg-right'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='text'>
+        Cancel
+      </div>
+    </button> -->
+
+    <button class='btn block-cube block-cube-hover' type='button'>
+      <div class='bg-top'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg-right'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='text'>
+        Forgot Password?
+      </div>
+    </button>
+  </form>
+</body>
+
+</html>
+
+
+
+
+<!-- <form action="action_page.php" method="post">
     <div class="container">
       <label for="Username"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="Username" required>
@@ -32,60 +132,4 @@
       <button type="button" class="cancelbtn">Cancel</button>
       <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
-  </form </body>
-
-</html>
-
-
-<!-- Maybe -->
-
-<!-- <form autocomplete='off' class='form'>
-  <div class='control'>
-    <h1>
-      Sign In
-    </h1>
-  </div>
-  <div class='control block-cube block-input'>
-    <input name='username' placeholder='Username' type='text'>
-    <div class='bg-top'>
-      <div class='bg-inner'></div>
-    </div>
-    <div class='bg-right'>
-      <div class='bg-inner'></div>
-    </div>
-    <div class='bg'>
-      <div class='bg-inner'></div>
-    </div>
-  </div>
-  <div class='control block-cube block-input'>
-    <input name='password' placeholder='Password' type='password'>
-    <div class='bg-top'>
-      <div class='bg-inner'></div>
-    </div>
-    <div class='bg-right'>
-      <div class='bg-inner'></div>
-    </div>
-    <div class='bg'>
-      <div class='bg-inner'></div>
-    </div>
-  </div>
-  <button class='btn block-cube block-cube-hover' type='button'>
-    <div class='bg-top'>
-      <div class='bg-inner'></div>
-    </div>
-    <div class='bg-right'>
-      <div class='bg-inner'></div>
-    </div>
-    <div class='bg'>
-      <div class='bg-inner'></div>
-    </div>
-    <div class='text'>
-      Log In
-    </div>
-  </button>
-  <div class='credits'>
-    <a href='https://codepen.io/marko-zub/' target='_blank'>
-      My other codepens
-    </a>
-  </div>
-</form> -->
+  </form </body> -->
